# yt-automator

./: .gitignore  batch_convert_audio.py  convert_audio.py  convert_audio.sh  pyrightconfig.json
backend/: main.py  speech.py  text_script.py  transcribe.py
backend/audio_files/: script_1754661573.txt  script_1754747735.txt  script_1754748022.txt
cb/: chatterbox_modal.py  pyproject.toml  whisperx_modal.py
frontend/click/: .gitignore  DYNAMIC_TIMESTAMPS.md  README.md  package-lock.json  package.json
frontend/click/public/: config.json
frontend/click/src/: Root.tsx
frontend/click/src/Visualizer/: BackgroundVideo.tsx  BassOverlay.tsx  Caption.tsx  Main.tsx
frontend/click/src/helpers/: apiService.ts  schema.ts
frontend/funfax/src/: Root.tsx
frontend/funfax/src/Visualizer/: BackgroundVideo.tsx  Caption.tsx
frontend/funfax/src/helpers/: timestampConfig.ts  timestampGenerator.ts
funfacts-finder/: facts.json  pyproject.toml  script.xml  walk  whisperx-sample.json
funfacts-finder/fact-chunks/: .gitignore  NOTICE
funfacts-finder/fffinder/: config.py  dlfile.py  fprocess.py  init.py  xml_block_parser.py
funfacts-finder/fffinder/steps/: facts_sampler.py  script_generator.py  script_parser.py  script_to_voice.py
funfacts-finder/raw_dataset/: p-10  p-100  p-101  p-102  p-103  p-104  p-105  p-106  p-107  p-108  p-109  p-11  p-110  p-111  p-112  p-113  p-114  p-115  p-116  p-117  p-118  p-119  p-12  p-120  p-121  p-122  p-123  p-124  p-125  p-126  p-127  p-128  p-129  p-13  p-130  p-131  p-132  p-133  p-134  p-135  (+159 more)
vmerge/: vmerge.py
